--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -198,14 +198,8 @@ header .navbar {
   width: 100%;
 }
 
-.report .titleCardD,
-.morenews .titleCardD,
-.sliderrComment .titleCardD,
-.sameColor .titleCardD a,
-.Sport .titleCardD a,
-.health .titleCardD a,
-.media .titleCardD,
-.sectionVideo .titleCardD a {
+.titleCardD,
+.titleCardD a {
   font-size: 26px;
   border-right: 4px solid var(--color-primary);
   color: var(--color-primary);
@@ -249,14 +243,18 @@ header .navbar {
 }
 
 .morenews .CardMoreNew .catmer,
-.group .textCardM .catmer {
+.group .textCardM .catmer,
+.importantNews .catmer,
+.AllNews .catmer {
   font-size: 14px;
   font-weight: normal;
   color: #666;
 }
 
 .morenews .CardMoreNew h5,
-.group .textCardM h5 {
+.group .textCardM h5,
+.importantNews h5,
+.row_AllNews h5 {
   font-size: 16px;
   color: #000;
 }
@@ -294,6 +292,14 @@ header .navbar {
   font-size: 16px;
 }
 
+.dailypen .morenews .list-comment .textComment h2 {
+  font-size: 20px;
+}
+
+.dailypen .morenews .list-comment .textComment h3 {
+  font-size: 16px;
+}
+
 .morenews .list-comment .textComment h3 {
   color: var(--color-primary);
   font-size: 14px;
@@ -308,10 +314,19 @@ header .navbar {
   font-size: 30px;
 }
 
-.sliderrComment {
+.sliderrComment,
+.Outwardly {
   background-color: #e9e9e9;
   padding: 20px 0px;
   margin-top: 10px;
+}
+
+.Outwardly {
+  background: none !important;
+}
+
+.Outwardly .cardSlider {
+  margin-top: 15px;
 }
 
 .CardMoreNew .linkCard img {
@@ -320,28 +335,32 @@ header .navbar {
   max-height: 205px;
 }
 
-.sliderrComment .cardSlider img {
+.sliderrComment .cardSlider img,
+.Outwardly .cardSlider img {
   border-radius: 50%;
   max-width: 71px;
   min-width: 71px;
   border: 1px solid var(--color-primary);
 }
 
-.sliderrComment .cardSlider {
+.sliderrComment .cardSlider,
+.Outwardly .cardSlider {
   border: 5px solid #b2b2b2;
   background-color: #fff;
   min-height: 267px;
   padding: 5% 20px;
 }
 
-.sliderrComment .cardSlider h1 {
+.sliderrComment .cardSlider h1,
+.Outwardly .cardSlider h1 {
   color: var(--color-primary);
   font-size: 28px;
   font-weight: normal;
   display: block;
 }
 
-.sliderrComment .cardSlider p {
+.sliderrComment .cardSlider p,
+.Outwardly .cardSlider p {
   margin: 0;
   font-size: 18px;
   color: #6a6a6a;
@@ -353,7 +372,12 @@ header .navbar {
   margin-top: 36px;
 }
 
-.sliderrComment .cardSlider .personalty h3 {
+.Outwardly .cardSlider .personalty {
+  margin-top: 10px;
+}
+
+.sliderrComment .cardSlider .personalty h3,
+.Outwardly .cardSlider .personalty h3 {
   font-size: 16px;
   color: var(--color-primary);
   font-weight: normal;
@@ -500,6 +524,205 @@ header .navbar {
   color: #fff;
 }
 
+/* Start singleNews Page */
+.columnRight {
+  padding: 20px 0px;
+}
+
+.columnRight .columnRightCol .dewscriptionSingleNews h1 {
+  font-size: 38px;
+  color: #000;
+  margin-bottom: 10px;
+  font-weight: bold;
+}
+
+.columnRight .columnRightCol h3 {
+  color: var(--color-primary);
+  font-size: 18px;
+}
+
+.columnRight .description {
+  display: flex;
+  gap: 20px;
+}
+
+.columnRight .description span {
+  color: #424542;
+}
+
+.columnRight p {
+  font-size: 20px;
+  line-height: 30px;
+  color: #555;
+  text-align: justify;
+}
+
+.adInSection img {
+  width: 100%;
+  margin-top: 10px;
+}
+
+.importantNews {
+  margin-top: 25px;
+  border-top: 3px var(--color-primary) solid;
+  border-bottom: 3px var(--color-primary) solid;
+}
+
+.importantNews h1 {
+  margin-top: 7px;
+  border-width: 5px !important;
+}
+
+.dewscriptionSingleNews {
+  padding-bottom: 20px;
+}
+
+.SingleNews .importantNews h5 {
+  border: none !important;
+}
+
+.SingleNews .contentColumnRight {
+  margin: 15px 0px;
+}
+
+.columnleftAd {
+  text-align: center;
+}
+
+.twin-report-side .boximageF h1 {
+  font-size: 15px;
+  padding-bottom: 10px;
+}
+
+.twin-report-side .boximageF {
+  margin-top: 10px;
+}
+
+.specially {
+  margin-top: 20px;
+}
+
+.newComment {
+  margin-top: 20px;
+}
+
+.CommentsPage .cardSlider p {
+  margin: 0;
+  font-size: 14px;
+  color: #6a6a6a;
+  margin-top: 10px;
+  line-height: 24px;
+  display: block;
+  text-align: justify;
+}
+/* ===== page all news ====== */
+.AllNews {
+  padding: 20px 0px;
+}
+
+.AllNews .columnSmallAllNews .boximageF h1 {
+  font-size: 15px;
+  padding: 0px 10px;
+}
+
+.AllNews .columnSmallAllNews {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  gap: 10px;
+}
+
+.row_AllNews .card {
+  border: none !important;
+}
+
+.row_AllNews .col-lg-4 {
+  margin-top: 30px;
+}
+
+.AllNewsPagination .pagination {
+  margin-top: 35px;
+}
+
+.pagination .page-item .page-link {
+  border-radius: unset !important;
+}
+
+.page-item .page-link {
+  color: #fff !important;
+  background-color: var(--color-primary);
+}
+
+/* ====== descriptionComment Page ====== */
+.descriptionComment .comment .profile img {
+  max-width: 91px;
+  min-width: 91px;
+  border-radius: 50%;
+  object-fit: cover;
+  max-height: 91px;
+  overflow: hidden;
+  border: 2px var(--color-main) solid;
+}
+
+.descriptionComment .comment .profile {
+  display: flex;
+  align-items: center;
+}
+
+.descriptionComment .titledescription {
+  font-weight: normal;
+  margin-bottom: 10px;
+  font-size: 38px;
+}
+
+.descriptionComment .subtitleDescription {
+  font-weight: normal;
+  margin-bottom: 20px;
+  font-size: 16px;
+  color: #8c8a8c;
+  display: block;
+}
+
+.descriptionComment .comment p {
+  font-size: 20px;
+  line-height: 30px;
+  color: #555;
+  line-height: 2.5;
+  margin-top: 20px;
+  text-align: justify;
+}
+
+.descriptionComment .comment h3 {
+  color: var(--color-primary);
+  font-size: 20px;
+  font-weight: bold;
+  margin-right: 10px;
+}
+
+.descriptionComment .comment {
+  border-bottom: 1px #ddd solid;
+  padding-bottom: 60px;
+  margin-bottom: 60px;
+}
+
+.cardVideo .timeV {
+  font-size: 14px;
+  font-weight: light;
+  margin-top: 7px;
+  display: block;
+  color: #666;
+}
+
+.cardVideo h1 {
+  font-size: 17px;
+  color: #000;
+  font-weight: normal;
+}
+
+.cardVideo {
+  width: 49%;
+}
+
 /* ===== Footer ===== */
 .footerTop {
   height: 81px;
@@ -640,9 +863,31 @@ header .navbar {
     width: 100%;
     max-height: none !important;
   }
+
+  .columnRight .columnRightCol h1 {
+    font-size: 22px !important;
+  }
+
+  .columnSmallAllNews {
+    margin-top: 10px;
+  }
+
+  .row_AllNews {
+    flex-direction: column;
+  }
+
+  .twin-report-side .boximageF {
+    margin-top: 10px;
+  }
 }
 
 @media (max-width: 991px) {
+  .container,
+  .container-lg,
+  .container-md,
+  .container-sm {
+    max-width: 1100px !important;
+  }
   .TopHeader .icon {
     display: none;
   }
@@ -705,11 +950,30 @@ header .navbar {
   .adinBody .col-lg-6 {
     padding: 0px;
   }
+  .cardVideo {
+    width: 100%;
+    font-size: 14px !important;
+  }
+
+  .cardVideo h1 {
+    font-size: 14px !important;
+  }
+
+  .titleCardD {
+    margin-top: 15px !important;
+  }
 }
 
 @media (min-width: 991px) {
   .sectionVideo .container .row .col-lg-6:last-child {
     padding-right: 0px !important;
+  }
+  .importantNews img {
+    max-height: 167px;
+    width: 100%;
+  }
+  .SingleNews .contentColumnRight {
+    margin-top: 169px;
   }
 }
 
@@ -733,6 +997,14 @@ header .navbar {
   .navbar-toggler i {
     font-size: 30px;
   }
+
+  .columnRight .description span {
+    font-size: 12px;
+  }
+
+  .columnRight .description h3 {
+    font-size: 12px;
+  }
 }
 
 @media (min-width: 1200px) {
@@ -753,11 +1025,12 @@ header .navbar {
   }
 }
 
-@media (max-width: 992px) {
-  .container,
-  .container-lg,
-  .container-md,
-  .container-sm {
-    max-width: 1100px !important;
+@media screen and (min-width: 768px) {
+  .CommentsPage .Outwardly .col-lg-4 {
+    padding: 5px !important;
+  }
+
+  .CommentsPage .Outwardly .cardSlider {
+    margin: 0px !important;
   }
 }
